src/pattern_detector/adapters/outbound/antlr/generated/odin/OdinParser.py
# Generated from OdinParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class OdinParser ( Parser ):

    grammarFileName = "OdinParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'package'", "'import'", "'foreign'", 
                     "'struct'", "'union'", "'enum'", "'bit_set'", "'bit_field'", 
                     "'map'", "'matrix'", "'dynamic'", "'proc'", "'return'", 
                     "'defer'", "'if'", "'else'", "'when'", "'where'", "'for'", 
                     "'do'", "'in'", "'not_in'", "'switch'", "'case'", "'default'", 
                     "'cast'", "'auto_cast'", "'transmute'", "'using'", 
                     "'or_return'", "'or_break'", "'or_continue'", "'break'", 
                     "'continue'", "'fallthrough'", "'context'", "'distinct'", 
                     "'typeid'", "'rawptr'", "'any'", "'nil'", "'asm'", 
                     "'instanceof'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'::'", "':='", "'->'", "'..<'", "'..='", "'..'", "'.'", 
                     "','", "';'", "':'", "'?'", "'^'", "'$'", "'('", "')'", 
                     "'['", "']'", "'{'", "'}'", "'='", "'+='", "'-='", 
                     "'*='", "'/='", "'+'", "'-'", "'*'", "'/'", "'%'", 
                     "'&&'", "'||'", "'&'", "'|'", "'~'", "'!'", "'<<'", 
                     "'>>'", "'<='", "'>='", "'=='", "'!='", "'<'", "'>'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'\\'" ]

    symbolicNames = [ "<INVALID>", "PACKAGE", "IMPORT", "FOREIGN", "STRUCT", 
                      "UNION", "ENUM", "BIT_SET", "BIT_FIELD", "MAP", "MATRIX", 
                      "DYNAMIC", "PROC", "RETURN", "DEFER", "IF", "ELSE", 
                      "WHEN", "WHERE", "FOR", "DO", "IN", "NOT_IN", "SWITCH", 
                      "CASE", "DEFAULT", "CAST", "AUTO_CAST", "TRANSMUTE", 
                      "USING", "OR_RETURN", "OR_BREAK", "OR_CONTINUE", "BREAK", 
                      "CONTINUE", "FALLTHROUGH", "CONTEXT", "DISTINCT", 
                      "TYPEID", "RAWPTR", "ANY", "NIL", "ASM", "INSTANCEOF", 
                      "FILE_TAG", "DIRECTIVE", "ATTRIBUTE", "COLON_COLON", 
                      "COLON_EQUAL", "ARROW", "RANGE_HALF_OPEN", "RANGE_CLOSED", 
                      "ELLIPSIS", "DOT", "COMMA", "SEMI", "COLON", "QUESTION", 
                      "CARET", "DOLLAR", "LPAREN", "RPAREN", "LBRACK", "RBRACK", 
                      "LBRACE", "RBRACE", "EQUAL", "PLUS_EQUAL", "MINUS_EQUAL", 
                      "STAR_EQUAL", "SLASH_EQUAL", "PLUS", "MINUS", "STAR", 
                      "SLASH", "PERCENT", "AMP_AMP", "PIPE_PIPE", "AMP", 
                      "PIPE", "TILDE", "EXCLAMATION", "LT_LT", "GT_GT", 
                      "LE", "GE", "EQ", "NEQ", "LT", "GT", "FLOAT_LIT", 
                      "HEX_LIT", "BIN_LIT", "OCT_LIT", "INT_LIT", "STRING_LIT", 
                      "RAW_STRING_LIT", "RUNE_LIT", "IDENT", "LINE_COMMENT", 
                      "BLOCK_COMMENT", "SHEBANG", "LINE_CONTINUATION", "BACKSLASH", 
                      "WS" ]

    RULE_compilationUnit = 0
    RULE_fileTag = 1
    RULE_packageDecl = 2
    RULE_importDecl = 3
    RULE_foreignImportBlock = 4
    RULE_topLevelDecl = 5
    RULE_foreignBlock = 6
    RULE_constantDecl = 7
    RULE_variableDecl = 8
    RULE_identList = 9
    RULE_exprList = 10
    RULE_typeList = 11
    RULE_typeOrExpr = 12
    RULE_structDecl = 13
    RULE_structFieldList = 14
    RULE_structField = 15
    RULE_unionDecl = 16
    RULE_enumDecl = 17
    RULE_enumMemberList = 18
    RULE_enumMember = 19
    RULE_bitSetDecl = 20
    RULE_procDecl = 21
    RULE_procGroup = 22
    RULE_callingConvention = 23
    RULE_polyParams = 24
    RULE_polyParamList = 25
    RULE_polyParam = 26
    RULE_paramList = 27
    RULE_param = 28
    RULE_returnTypes = 29
    RULE_returnFieldList = 30
    RULE_returnField = 31
    RULE_procBody = 32
    RULE_block = 33
    RULE_stmt = 34
    RULE_labelStmt = 35
    RULE_directiveStmt = 36
    RULE_returnStmt = 37
    RULE_deferStmt = 38
    RULE_ifStmt = 39
    RULE_whenStmt = 40
    RULE_forStmt = 41
    RULE_forClause = 42
    RULE_switchStmt = 43
    RULE_switchCase = 44
    RULE_assignStmt = 45
    RULE_assignOp = 46
    RULE_simpleStmt = 47
    RULE_exprStmt = 48
    RULE_type = 49
    RULE_pointerType = 50
    RULE_sliceType = 51
    RULE_dynArrayType = 52
    RULE_arrayType = 53
    RULE_mapType = 54
    RULE_matrixType = 55
    RULE_procType = 56
    RULE_distinctType = 57
    RULE_polyType = 58
    RULE_specializedType = 59
    RULE_qualifiedIdent = 60
    RULE_expr = 61
    RULE_argumentList = 62
    RULE_argument = 63
    RULE_compoundLiteral = 64
    RULE_literal = 65

    ruleNames =  [ "compilationUnit", "fileTag", "packageDecl", "importDecl", 
                   "foreignImportBlock", "topLevelDecl", "foreignBlock", 
                   "constantDecl", "variableDecl", "identList", "exprList", 
                   "typeList", "typeOrExpr", "structDecl", "structFieldList", 
                   "structField", "unionDecl", "enumDecl", "enumMemberList", 
                   "enumMember", "bitSetDecl", "procDecl", "procGroup", 
                   "callingConvention", "polyParams", "polyParamList", "polyParam", 
                   "paramList", "param", "returnTypes", "returnFieldList", 
                   "returnField", "procBody", "block", "stmt", "labelStmt", 
                   "directiveStmt", "returnStmt", "deferStmt", "ifStmt", 
                   "whenStmt", "forStmt", "forClause", "switchStmt", "switchCase", 
                   "assignStmt", "assignOp", "simpleStmt", "exprStmt", "type", 
                   "pointerType", "sliceType", "dynArrayType", "arrayType", 
                   "mapType", "matrixType", "procType", "distinctType", 
                   "polyType", "specializedType", "qualifiedIdent", "expr", 
                   "argumentList", "argument", "compoundLiteral", "literal" ]

    EOF = Token.EOF
    PACKAGE=1
    IMPORT=2
    FOREIGN=3
    STRUCT=4
    UNION=5
    ENUM=6
    BIT_SET=7
    BIT_FIELD=8
    MAP=9
    MATRIX=10
    DYNAMIC=11
    PROC=12
    RETURN=13
    DEFER=14
    IF=15
    ELSE=16
    WHEN=17
    WHERE=18
    FOR=19
    DO=20
    IN=21
    NOT_IN=22
    SWITCH=23
    CASE=24
    DEFAULT=25
    CAST=26
    AUTO_CAST=27
    TRANSMUTE=28
    USING=29
    OR_RETURN=30
    OR_BREAK=31
    OR_CONTINUE=32
    BREAK=33
    CONTINUE=34
    FALLTHROUGH=35
    CONTEXT=36
    DISTINCT=37
    TYPEID=38
    RAWPTR=39
    ANY=40
    NIL=41
    ASM=42
    INSTANCEOF=43
    FILE_TAG=44
    DIRECTIVE=45
    ATTRIBUTE=46
    COLON_COLON=47
    COLON_EQUAL=48
    ARROW=49
    RANGE_HALF_OPEN=50
    RANGE_CLOSED=51
    ELLIPSIS=52
    DOT=53
    COMMA=54
    SEMI=55
    COLON=56
    QUESTION=57
    CARET=58
    DOLLAR=59
    LPAREN=60
    RPAREN=61
    LBRACK=62
    RBRACK=63
    LBRACE=64
    RBRACE=65
    EQUAL=66
    PLUS_EQUAL=67
    MINUS_EQUAL=68
    STAR_EQUAL=69
    SLASH_EQUAL=70
    PLUS=71
    MINUS=72
    STAR=73
    SLASH=74
    PERCENT=75
    AMP_AMP=76
    PIPE_PIPE=77
    AMP=78
    PIPE=79
    TILDE=80
    EXCLAMATION=81
    LT_LT=82
    GT_GT=83
    LE=84
    GE=85
    EQ=86
    NEQ=87
    LT=88
    GT=89
    FLOAT_LIT=90
    HEX_LIT=91
    BIN_LIT=92
    OCT_LIT=93
    INT_LIT=94
    STRING_LIT=95
    RAW_STRING_LIT=96
    RUNE_LIT=97
    IDENT=98
    LINE_COMMENT=99
    BLOCK_COMMENT=100
    SHEBANG=101
    LINE_CONTINUATION=102
    BACKSLASH=103
    WS=104

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class CompilationUnitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(OdinParser.EOF, 0)

        def fileTag(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OdinParser.FileTagContext)
            else:
                return self.getTypedRuleContext(OdinParser.FileTagContext,i)


        def packageDecl(self):
            return self.getTypedRuleContext(OdinParser.PackageDeclContext,0)


        def topLevelDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OdinParser.TopLevelDeclContext)
            else:
                return self.getTypedRuleContext(OdinParser.TopLevelDeclContext,i)


        def getRuleIndex(self):
            return OdinParser.RULE_compilationUnit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompilationUnit" ):
                listener.enterCompilationUnit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompilationUnit" ):
                listener.exitCompilationUnit(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCompilationUnit" ):
                return visitor.visitCompilationUnit(self)
            else:
                return visitor.visitChildren(self)




    def compilationUnit(self):

        localctx = OdinParser.CompilationUnitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_compilationUnit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==44:
                self.state = 132
                self.fileTag()
                self.state = 137
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 139
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==1:
                self.state = 138
                self.packageDecl()


            self.state = 144
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 36134350135361548) != 0) or _la==98:
                self.state = 141
                self.topLevelDecl()
                self.state = 146
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 147
            self.match(OdinParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FileTagContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FILE_TAG(self):
            return self.getToken(OdinParser.FILE_TAG, 0)

        def SEMI(self):
            return self.getToken(OdinParser.SEMI, 0)

        def getRuleIndex(self):
            return OdinParser.RULE_fileTag

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFileTag" ):
                listener.enterFileTag(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFileTag" ):
                listener.exitFileTag(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFileTag" ):
                return visitor.visitFileTag(self)
            else:
                return visitor.visitChildren(self)




    def fileTag(self):

        localctx = OdinParser.FileTagContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_fileTag)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self.match(OdinParser.FILE_TAG)
            self.state = 151
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 150
                self.match(OdinParser.SEMI)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PackageDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PACKAGE(self):
            return self.getToken(OdinParser.PACKAGE, 0)

        def qualifiedIdent(self):
            return self.getTypedRuleContext(OdinParser.QualifiedIdentContext,0)


        def SEMI(self):
            return self.getToken(OdinParser.SEMI, 0)

        def getRuleIndex(self):
            return OdinParser.RULE_packageDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPackageDecl" ):
                listener.enterPackageDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPackageDecl" ):
                listener.exitPackageDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPackageDecl" ):
                return visitor.visitPackageDecl(self)
            else:
                return visitor.visitChildren(self)




    def packageDecl(self):

        localctx = OdinParser.PackageDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_packageDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            self.match(OdinParser.PACKAGE)
            self.state = 154
            self.qualifiedIdent()
            self.state = 156
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 155
                self.match(OdinParser.SEMI)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImportDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IMPORT(self):
            return self.getToken(OdinParser.IMPORT, 0)

        def STRING_LIT(self):
            return self.getToken(OdinParser.STRING_LIT, 0)

        def RAW_STRING_LIT(self):
            return self.getToken(OdinParser.RAW_STRING_LIT, 0)

        def ATTRIBUTE(self, i:int=None):
            if i is None:
                return self.getTokens(OdinParser.ATTRIBUTE)
            else:
                return self.getToken(OdinParser.ATTRIBUTE, i)

        def IDENT(self):
            return self.getToken(OdinParser.IDENT, 0)

        def SEMI(self):
            return self.getToken(OdinParser.SEMI, 0)

        def FOREIGN(self):
            return self.getToken(OdinParser.FOREIGN, 0)

        def foreignImportBlock(self):
            return self.getTypedRuleContext(OdinParser.ForeignImportBlockContext,0)


        def getRuleIndex(self):
            return OdinParser.RULE_importDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImportDecl" ):
                listener.enterImportDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImportDecl" ):
                listener.exitImportDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImportDecl" ):
                return visitor.visitImportDecl(self)
            else:
                return visitor.visitChildren(self)




    def importDecl(self):

        localctx = OdinParser.ImportDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_importDecl)
        self._la = 0 # Token type
        try:
            self.state = 191
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 161
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==46:
                    self.state = 158
                    self.match(OdinParser.ATTRIBUTE)
                    self.state = 163
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 164
                self.match(OdinParser.IMPORT)
                self.state = 166
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==98:
                    self.state = 165
                    self.match(OdinParser.IDENT)


                self.state = 168
                _la = self._input.LA(1)
                if not(_la==95 or _la==96):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 170
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
                if la_ == 1:
                    self.state = 169
                    self.match(OdinParser.SEMI)


                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 175
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==46:
                    self.state = 172
                    self.match(OdinParser.ATTRIBUTE)
                    self.state = 177
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 178
                self.match(OdinParser.FOREIGN)
                self.state = 179
                self.match(OdinParser.IMPORT)
                self.state = 181
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==98:
                    self.state = 180
                    self.match(OdinParser.IDENT)


                self.state = 186
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [95]:
                    self.state = 183
                    self.match(OdinParser.STRING_LIT)
                    pass
                elif token in [96]:
                    self.state = 184
                    self.match(OdinParser.RAW_STRING_LIT)
                    pass
                elif token in [64]:
                    self.state = 185
                    self.foreignImportBlock()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 189
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
                if la_ == 1:
                    self.state = 188
                    self.match(OdinParser.SEMI)


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForeignImportBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(OdinParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(OdinParser.RBRACE, 0)

        def STRING_LIT(self, i:int=None):
            if i is None:
                return self.getTokens(OdinParser.STRING_LIT)
            else:
                return self.getToken(OdinParser.STRING_LIT, i)

        def RAW_STRING_LIT(self, i:int=None):
            if i is None:
                return self.getTokens(OdinParser.RAW_STRING_LIT)
            else:
                return self.getToken(OdinParser.RAW_STRING_LIT, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(OdinParser.COMMA)
            else:
                return self.getToken(OdinParser.COMMA, i)

        def getRuleIndex(self):
            return OdinParser.RULE_foreignImportBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForeignImportBlock" ):
                listener.enterForeignImportBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForeignImportBlock" ):
                listener.exitForeignImportBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForeignImportBlock" ):
                return visitor.visitForeignImportBlock(self)
            else:
                return visitor.visitChildren(self)




    def foreignImportBlock(self):

        localctx = OdinParser.ForeignImportBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_foreignImportBlock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 193
            self.match(OdinParser.LBRACE)
            self.state = 197
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((((_la - 54)) & ~0x3f) == 0 and ((1 << (_la - 54)) & 6597069766657) != 0):
                self.state = 194
                _la = self._input.LA(1)
                if not(((((_la - 54)) & ~0x3f) == 0 and ((1 << (_la - 54)) & 6597069766657) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 199
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 200
            self.match(OdinParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TopLevelDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def importDecl(self):
            return self.getTypedRuleContext(OdinParser.ImportDeclContext,0)


        def constantDecl(self):
            return self.getTypedRuleContext(OdinParser.ConstantDeclContext,0)


        def variableDecl(self):
            return self.getTypedRuleContext(OdinParser.VariableDeclContext,0)


        def foreignBlock(self):
            return self.getTypedRuleContext(OdinParser.ForeignBlockContext,0)


        def whenStmt(self):
            return self.getTypedRuleContext(OdinParser.WhenStmtContext,0)


        def directiveStmt(self):
            return self.getTypedRuleContext(OdinParser.DirectiveStmtContext,0)


        def SEMI(self):
            return self.getToken(OdinParser.SEMI, 0)

        def getRuleIndex(self):
            return OdinParser.RULE_topLevelDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTopLevelDecl" ):
                listener.enterTopLevelDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTopLevelDecl" ):
                listener.exitTopLevelDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTopLevelDecl" ):
                return visitor.visitTopLevelDecl(self)
            else:
                return visitor.visitChildren(self)




    def topLevelDecl(self):

        localctx = OdinParser.TopLevelDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_topLevelDecl)
        try:
            self.state = 209
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 202
                self.importDecl()
                pass
